update for AI Insighst Engine

--- a/resources/app-templates/leocdp-admin/login.html
+++ b/resources/app-templates/leocdp-admin/login.html
@@ -54,7 +54,7 @@
 	setTimeout(function(){
 		if (location.host === 'dcdp.bigdatavietnam.org') { 
 			$('#username').val('demo');  
-			$('#password').val('123456');   
+			$('#password').val('12345678');   
 		}	
 	},1000)
 	
