--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -134,7 +134,7 @@
 				<a href="javascript:handleSegmentPersonalizationTabs()" data-target-tab="panel_segment_data_personalization" title="Data Personalization" > <i class="fa fa-smile-o" aria-hidden="true"></i> Personalization </a>
 	       	</li>
 	       	<li id="segment_campaigns"  style="display: none;" >
-				<a href="javascript:handleSegmentCampaignsTabs()" data-target-tab="panel_segment_automated_campaigns" title="Automated Campaigns" > <i class="fa fa-fw fa-cogs" aria-hidden="true"></i> Campaigns </a>
+				<a href="javascript:handleSegmentCampaignsTabs()" data-target-tab="panel_segment_automated_campaigns" title="Automation Rules" > <i class="fa fa-fw fa-cogs" aria-hidden="true"></i> Automation Rules </a>
 	       	</li>
 	  	</ul>
 	  	
@@ -582,7 +582,7 @@
 				</div>
 			</div>
 
-			<!-- tab 9 automated campaigns  -->
+			<!-- tab 9 Automation Rules  -->
 			<div class="tab-pane" id="panel_segment_automated_campaigns" >
 				<div class="form-group highlight_box" >
 		     		<div class="col-lg-3">
@@ -596,7 +596,7 @@
 				    <div class="panel-heading collapse-panel-heading active" role="tab" id="automatedCampaignsHeader">
 				      <h4 class="panel-title">
 				        <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#automatedCampaignPlan" aria-expanded="false" aria-controls="synchronizationPlan">
-				          <i class="fa fa-info-circle" aria-hidden="true"></i> Automated Campaigns 
+				          <i class="fa fa-info-circle" aria-hidden="true"></i> Automation Rules 
 				        </a>
 				      </h4>
 				    </div>
