--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -183,7 +183,7 @@
 			<li >
 				<div class="panel panel-default">
 				    <div class="panel-body" style="font-size: 11px;" >
-				    	<div title="Build ID" data-container="body" data-toggle="popover" data-placement="top" >
+				    	<div title="Build ID" data-container="body" data-toggle="popover" data-placement="top" style="color:#3300ff!important; font-size: 10px" >
 				    		<b>Build ID: <span id="system_build_id" ></span></b>
 				    	</div>
 				    </div>
