improve system, remove old libs

--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -13,7 +13,7 @@
 									data-content="AI-Driven Insights Platform" />
 		</a>
 
-		<div style="width: 100%; display: none;">
+		<div style="width:100%;">
 			<input id="main_search_profile" type="text" placeholder="Enter name, email or phone number to search customer profiles" autocomplete="off" 
 				title="Profile Search" data-container="body" data-toggle="popover" data-placement="bottom" data-content="You can enter name, email or phone number to search customer profiles" >
 		</div>
@@ -55,7 +55,7 @@
 			<!--  1 - Data Reports Menu   -->
 			<li id="nav_analytics_hub" style="display: none;" data-system-user-roles="0,2,4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#analytics_hub_menu"> <i class="fa fa-fw fa-pie-chart"></i>
-				 	Unified Report Hub <i id="data_analytics_hub_collapse_icon" class="fa fa-fw fa-caret-down"> </i>
+				 	Data Analytics <i id="data_analytics_hub_collapse_icon" class="fa fa-fw fa-caret-down"> </i>
 				</a>
 				<ul id="analytics_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
@@ -73,7 +73,7 @@
 							title="CX Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show customer experience reports: product/service rating and feedback survey" > 
 							<i class="fa fa-fw fa-tachometer"></i> CX Data Report </a>
 					</li>
-					<li>
+					<li style="display: none">
 						<a id="Custom_Dashboard" href="#calljs-leoCdpRouter('Custom_Dashboard')" 
 							title="Custom Dashboard" data-container="body" data-toggle="popover" data-placement="right" data-content="Show custom dashboard about sales, marketing and finance" > 
 							<i class="fa fa-fw fa-bar-chart"></i> Custom Reports </a>
@@ -81,90 +81,89 @@
 				</ul>
 			</li>
 			
-			<!--  2 - Customer Data Hub Menu  -->
+			<!--  2 - Data Journey Hub   -->
+			<li id="nav_journey_hub"  >
+				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#journey_hub_menu"> <i class="fa fa-fw fa-map"></i>
+				 	Data Journey Map<i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+				</a>
+				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">	
+					<li id="Customer_Persona_Menu" style="display: none" >
+						<a id="Customer_Persona" href="#calljs-leoCdpRouter('Customer_Persona')" 
+							title="Customer Persona Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer personas" >
+							<i class="fa fa-fw fa-user-circle-o"></i> Customer Persona </a>
+					</li>
+					<li style="display: none;" data-system-user-roles="5">
+						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" 
+							title="Data Journey Map Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer data journey maps and touchpoint data hubs" > 
+							<i class="fa fa-fw fa-exchange"></i> Data Journey Map </a>
+					</li>		
+					<li id="Event_Data_Funnel_Menu"  >
+						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" 
+							title="Event Data Funnel Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all event data metrics for customer analytics" >
+							<i class="fa fa-fw fa-filter"></i> Behavioral Metrics </a>
+					</li>					
+				</ul>
+			</li>
+			
+			<!--  3 - Customer Data Hub Menu  -->
 			<li id="nav_customer_hub" style="display: none;" data-system-user-roles="1,2,3,4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#customer_hub_menu"> <i class="fa fa-fw fa-address-card-o"></i>
-					Customer Data Hub <i id="customer_data_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					Customer Data Hub<i id="customer_data_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="customer_hub_menu" class="collapse in" aria-expanded="true">
-					<li id="Community_Management_Menu" style="display: none">
-						<a id="Community_Management" href="#calljs-leoCdpRouter('Community_Management')" 
-							title="All Customer Communities" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer communities" > 
-							<i class="fa fa-fw fa-users"></i> Communities </a>
+					
+					<li id="Profile_Management_Menu" >
+						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
+							title="All Customer Profiles" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer profiles: visitor, lead, prospect & engaged customers" > 
+							<i class="fa fa-fw fa-user-circle-o"></i> Profile Management </a>
 					</li>
 					<li id="Segment_Management_Menu" >
 						<a id="Segment_Management" href="#calljs-leoCdpRouter('Segment_Management')" 
 							title="All Customer Segments" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer segments: active visitors, leads, engaged customers,..."   > 
 							<i class="fa fa-users" aria-hidden="true"></i> Segment Management </a>
 					</li>
-					<li id="Profile_Management_Menu" >
-						<a id="Profile_Management" href="#calljs-leoCdpRouter('Profile_Management')" 
-							title="All Customer Profiles" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer profiles: visitor, lead, prospect & engaged customers" > 
-							<i class="fa fa-fw fa-user-circle-o"></i> Profile Management </a>
+					<li id="Community_Management_Menu" style="display: none">
+						<a id="Community_Management" href="#calljs-leoCdpRouter('Community_Management')" 
+							title="All Customer Communities" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer communities" > 
+							<i class="fa fa-fw fa-users"></i> Communities </a>
 					</li>
 			
 				</ul>
 			</li>
-			
-			<!--  3 - Data Journey Hub   -->
-			<li id="nav_journey_hub"  >
-				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#journey_hub_menu"> <i class="fa fa-fw fa-map"></i>
-				 	Data Journey Hub <i id="journey_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
-				</a>
-				<ul id="journey_hub_menu" class="collapse in" aria-expanded="true">	
-					<li id="Event_Data_Funnel_Menu"  >
-						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Customer_Persona')" 
-							title="Event Data Funnel Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all event data metrics for customer analytics" >
-							<i class="fa fa-fw fa-user-circle-o"></i> Customer Persona </a>
-					</li>		
-					<li id="Event_Data_Funnel_Menu"  >
-						<a id="Event_Data_Funnel" href="#calljs-leoCdpRouter('Event_Data_Funnel')" 
-							title="Event Data Funnel Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all event data metrics for customer analytics" >
-							<i class="fa fa-fw fa-filter"></i> Behavioral Metrics </a>
-					</li>
-					<li style="display: none;" data-system-user-roles="5">
-						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" 
-							title="Data Journey Map Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer data journey maps and touchpoint data hubs" > 
-							<i class="fa fa-fw fa-exchange"></i> Data Journey Map </a>
-					</li>
-				</ul>
-			</li>
-			
-			
 			
 			<!-- 4 - Data Activation Hub Menu -->
 			<li id="nav_activation_hub" style="display: none;" data-system-user-roles="4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#data_activation_hub_menu"> 
-				<i class="fa fa-fw fa-cogs"></i> Automation Hub <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+				<i class="fa fa-fw fa-cogs"></i> Activation Workflow <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
-					<li id="Automated_Campaigns_Menu" >
-						<a id="Automated_Campaigns" href="#calljs-leoCdpRouter('Automated_Campaigns')" 
-							title="Automation Rules" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage Automation Rules for email marketing, Zalo marketing, SMS marketing, Facebook Ads,... " >
-							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Automation AI Model </a>
-					</li>
-					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
-						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')" 
-							title="Activation Services" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage activation services: data synchronization data enrichment & data personalization"  >
-							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Activation Services </a>
-					</li>
-					<li id="Activation_Rules_Menu" style="display: none" >
-						<a id="Activation_Rules" href="#calljs-leoCdpRouter('Activation_Rules')">
-							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Activation Rules </a>
-					</li>
 					<li>
 						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" 
 							title="Digital Asset Management" data-container="body" data-toggle="popover" data-placement="right" 
 								data-content="Manage digital data assets: short URL links, content catalogs, product catalogs, voucher catalogs, presentation slides, feedback forms, HTML email templates, text message templates"  > 
-							<i class="fa fa-fw fa-list" ></i> Digital Data Assets </a>
+							<i class="fa fa-fw fa-list" ></i> Data Asset Management </a>
+					</li>					
+					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
+						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')" 
+							title="Activation Services" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage activation services: data synchronization data enrichment & data personalization"  >
+							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Data Activation Services </a>
 					</li>
+					<li id="Automated_Campaigns_Menu" >
+						<a id="Automated_Campaigns" href="#calljs-leoCdpRouter('Automated_Campaigns')" 
+							title="Automation Rules" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage Automation Rules for email marketing, Zalo marketing, SMS marketing, Facebook Ads,... " >
+							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Automated Campaigns </a>
+					</li>
+					<li id="Activation_Rules_Menu" style="display: none" >
+						<a id="Activation_Rules" href="#calljs-leoCdpRouter('Activation_Rules')">
+							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Activation Rules </a>
+					</li>					
 				</ul>
 			</li>
 
 			<!--  5 - Core System Management  -->
 			<li id="nav_system_management" style="display: none;" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#system_management_menu"> <i class="fa fa-cogs" aria-hidden="true"></i>
-					System Admin <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					System Management <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="system_management_menu" class="collapse in" aria-expanded="true">
 					<li>
