--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -134,24 +134,24 @@
 			<!-- 4 - Data Activation Hub Menu -->
 			<li id="nav_activation_hub" style="display: none;" data-system-user-roles="4,5" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#data_activation_hub_menu"> 
-				<i class="fa fa-fw fa-cogs"></i> Activation Workflow <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+				<i class="fa fa-fw fa-cogs"></i> Data Activation <i id="data_activation_hub_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="data_activation_hub_menu" class="collapse in" aria-expanded="true">
 					<li>
 						<a id="Digital_Asset_Management" href="#calljs-leoCdpRouter('Digital_Asset_Management')" 
 							title="Digital Asset Management" data-container="body" data-toggle="popover" data-placement="right" 
 								data-content="Manage digital data assets: short URL links, content catalogs, product catalogs, voucher catalogs, presentation slides, feedback forms, HTML email templates, text message templates"  > 
-							<i class="fa fa-fw fa-list" ></i> Data Asset Management </a>
+							<i class="fa fa-fw fa-list" ></i> Digital Data Assets </a>
 					</li>					
 					<li id="Data_Service_Management_Menu" style="display: none;" data-system-user-roles="5,6" >
 						<a id="Data_Service_Management" href="#calljs-leoCdpRouter('Data_Service_Management')" 
 							title="Activation Services" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage activation services: data synchronization data enrichment & data personalization"  >
-							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Data Activation Services </a>
+							<i class="fa fa-fw fa-exchange" aria-hidden="true" ></i> Activation Services </a>
 					</li>
 					<li id="Automated_Campaigns_Menu" >
 						<a id="Automated_Campaigns" href="#calljs-leoCdpRouter('Automated_Campaigns')" 
 							title="Automation Rules" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage Automation Rules for email marketing, Zalo marketing, SMS marketing, Facebook Ads,... " >
-							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Automated Campaigns </a>
+							<i class="fa fa-fw fa-cogs" aria-hidden="true" ></i> Activation Campaigns </a>
 					</li>
 					<li id="Activation_Rules_Menu" style="display: none" >
 						<a id="Activation_Rules" href="#calljs-leoCdpRouter('Activation_Rules')">
@@ -163,7 +163,7 @@
 			<!--  5 - Core System Management  -->
 			<li id="nav_system_management" style="display: none;" >
 				<a class="top_nav_item" href="javascript:;" data-toggle="collapse" data-target="#system_management_menu"> <i class="fa fa-cogs" aria-hidden="true"></i>
-					System Management <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
+					System Admin <i id="system_management_collapse_icon" class="fa fa-fw fa-caret-down"></i>
 				</a>
 				<ul id="system_management_menu" class="collapse in" aria-expanded="true">
 					<li>
