--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -9,8 +9,7 @@
 		</button>
 
 		<a class="navbar-brand" href="/">
-			<img id="logo-img" src="" alt="MainLogo" style="display: none;" title="ReSynap" data-container="body" data-toggle="popover" data-placement="bottom" 
-									data-content="AI-Driven Insights Platform" />
+			<img id="logo-img" alt="CDP Logo" style="display: none;" title="CDP Admin" data-container="body" data-toggle="popover" data-placement="bottom" data-content="CDP Admin" />
 		</a>
 
 		<div style="width:100%;">
@@ -92,7 +91,7 @@
 							title="Customer Persona Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer personas" >
 							<i class="fa fa-fw fa-user-circle-o"></i> Customer Persona </a>
 					</li>
-					<li style="display: none;" data-system-user-roles="5">
+					<li >
 						<a id="Data_Journey_Map" href="#calljs-leoCdpRouter('Data_Journey_Map','id_default_journey')" 
 							title="Data Journey Map Management" data-container="body" data-toggle="popover" data-placement="right" data-content="Manage all customer data journey maps and touchpoint data hubs" > 
 							<i class="fa fa-fw fa-exchange"></i> Data Journey Map </a>
@@ -319,7 +318,10 @@
 		} else {
 			
 			$(window).resize(pageWrapperResize);
-			$('#logo-img').attr('src',window.pageHeaderLogo).show();
+			
+			// TODO
+			var logoCdpBackgroundColor = '';
+			$('#logo-img').attr('src',window.pageHeaderLogo).css('background-color',logoCdpBackgroundColor).show();
 			
 			pageWrapperResize();
 			loadUserInfoWidget();
