upgrade core libs

--- a/public/html/leo-event-proxy.html
+++ b/public/html/leo-event-proxy.html
@@ -65,8 +65,9 @@
         	try {
         		json = JSON.parse(e.data)
         	}
-        	catch(e){}
-        	
+        	catch(e){
+        		console.error(e)
+        	}        	
         	if(typeof json.call ==='string') {
         		proxyCallHandler(json)
         	}
