--- a/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/event-data-dashboard.html
@@ -13,14 +13,14 @@
 			</div>
 			
      		<!-- Date filter control -->
-	     	<div class="col-lg-12 float-right">
-				<div class='col-md-4 col-xs-12' style="border-right:1px solid #000;height: 60px;" >
+	     	<div class="row float-right">
+				<div class='col-md-12 col-xs-12' style="height:60px;" >
         			<label for="journeyMapList">Data Journey Map</label>
         			<div>
         				<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" > </select>
         			</div>
         		</div>
-		        <div class='col-md-3 col-xs-12'  >
+		        <div class='col-md-5 col-xs-12'  >
 		            <div class="form-group">
 		                <div class='input-group date' id='beginFilterDate'>
 		                    <input type='text' class="form-control" autocomplete="off" /> <span class="input-group-addon">
@@ -29,7 +29,7 @@
 		                </div>
 		            </div>
 		        </div>
-		        <div class='col-md-3 col-xs-12'>
+		        <div class='col-md-5 col-xs-12'>
 		            <div class="form-group">
 		                <div class='input-group date' id='endFilterDate'>
 		                    <input type='text' class="form-control" autocomplete="off" /> <span class="input-group-addon">
@@ -38,7 +38,7 @@
 		                </div>
 		            </div>
 		        </div>
-		        <div class='col-lg-2 col-xs-12 text-center'>
+		        <div class='col-md-2 col-xs-12 text-center'>
 		        	<button id="btn_refresh_event_report" type="button" class="btn btn-goto-router" style="width: 90%"  > 
 		        		<i class="fa fa-check" aria-hidden="true"></i> OK </button>
 		        </div>
