--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -36,13 +36,13 @@
 			</div>
 			
         	<div class="row float-right">
-        		<div class='col-md-4 col-xs-12' style="border-right:1px solid #000;height: 60px;font-weight: bold;" >
+        		<div class='col-md-12 col-xs-12' style="height: 60px;font-weight: bold;" >
         			<label for="journeyMapList">Data Journey Map</label>
         			<div>
         				<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" > </select>
         			</div>
         		</div>
-		        <div class='col-md-3 col-xs-12'  >
+		        <div class='col-md-5 col-xs-12'  >
 		            <div class="form-group">
 		                <div class='input-group date' id='beginFilterDate'>
 		                    <input type='text' class="form-control" autocomplete="off" /> <span class="input-group-addon">
@@ -51,7 +51,7 @@
 		                </div>
 		            </div>
 		        </div>
-		        <div class='col-md-3 col-xs-12'>
+		        <div class='col-md-5 col-xs-12'>
 		            <div class="form-group">
 		                <div class='input-group date' id='endFilterDate'>
 		                    <input type='text' class="form-control" autocomplete="off" /> <span class="input-group-addon">
